# inrule-data-agent

./: .gitignore  README.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  test_db_connection.py
backend/src/inrules_data_agent/: __init__.py  app.py
backend/src/inrules_data_agent/fixtures/: runtime_variables.json
backend/src/inrules_data_agent/generator/: __init__.py  generate.py
backend/src/inrules_data_agent/in_memory_schema/: InMemory.dbo.BENEFITS.sql  InMemory.dbo.CONTRACT_TERM.sql  InMemory.dbo.DRUG.sql  InMemory.dbo.DRUG_ATTR.sql  InMemory.dbo.ENROLLMENT.sql  InMemory.dbo.EO_HISTORY.sql  InMemory.dbo.EVENT.sql  InMemory.dbo.MEMBER.sql  InMemory.dbo.MEMBER_ATTRIBUTE.sql  InMemory.dbo.MEMBER_HISTORY.sql  InMemory.dbo.PARTIAL.sql  InMemory.dbo.PLAN_AFFILIATIONS.sql  InMemory.dbo.PRIOR_AUTH.sql  InMemory.dbo.PROVIDER.sql  InMemory.dbo.SCHEDULEII.sql
backend/src/inrules_data_agent/schema/: HRX.dbo.DiagnosisList.sql  HRX.dbo.DrugOverrides.sql  HRX.dbo.GCNSeqNo_Mstr.sql  HRX.dbo.HICLSeqNo_Mstr.sql  HRX.dbo.MEQ.sql  HRX.dbo.MemberExclusion.sql  HRX.dbo.NDCMaintDetailRules.sql  HRX.dbo.NDCParameters.sql  HRX.dbo.NDCPrefDrug.sql  HRX.dbo.NDCPriceHistory.sql  HRX.dbo.NDC_Mstr.sql  HRX.dbo.StateDiagCodes_Diags.sql  HRX.dbo.StateDiagCodes_DrugGroup.sql  HRX.dbo.StateDiagCodes_Drugs.sql  HRX.dbo.StateDiagCodes_Programs.sql  HRX.dbo.StateDiagCodes_old.sql  HRX.dbo.StateMessages.sql  HRX.dbo.prescriberAllowed.sql  (+12 more)
backend/tests/: test_generate_queries.py
backend/tests/golden/: queryparams_pairs.json
(+115 files in other folders)
