[project]
name = "inrules-data-agent"
version = "0.1.0"
description = "InRule data agent for pharmacy claim-edit schema and query workflows"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.120.0",
    "uvicorn[standard]>=0.35.0",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.1.0",
    "pandas>=2.3.0",
    "openpyxl>=3.1.0",
    "PyYAML>=6.0.0",
    "httpx>=0.28.0",
    "pyodbc>=5.3.0",
    "openai>=2.44.0",
    "sqlglot>=30.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/inrules_data_agent"]
